# apples-to-apples

./: .gitignore  Cargo.toml  build.rs  flake.nix
proto/: common.proto
src/: lib.rs  main.rs  tracing.rs
src/actors/: bot_manager.rs  connection.rs  dealer.rs  game_actor.rs  loader.rs  mod.rs
src/core/: hand.rs  mod.rs
src/core/cards/: green.rs  mod.rs  red.rs
src/core/deck/: green.rs  mod.rs  red.rs
src/core/player/: bot.rs  human.rs  id.rs  mod.rs  player.rs
src/networking/: gateway.rs  mod.rs  protocol.rs
src/parsing/: cards.rs  cli.rs  config.rs  mod.rs
