[package]
name = "apples-to-apples"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
dsl-ractor = "0.2.1"
futures = "0.3.31"
nom = "8.0.0"
ractor = "0.15.9"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
toml = "0.9.8"
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = { version = "0.1.44", features = ["async-await"] }
