[package]
name = "apples-to-apples"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
futures = "0.3.31"
nom = "8.0.0"
rand = "0.9.2"
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec", "full"] }
toml = "0.9.8"
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = { version = "0.1.44", features = ["async-await"] }
[build-dependencies]
anyhow ="1.0.100"
prost-build = "0.14.3"
